--- a/test/visual/button-group.html
+++ b/test/visual/button-group.html
@@ -133,7 +133,9 @@
             <button type="button" class="btn">4</button>
         </div>
         <div class="input-group">
-            <span class="input-group-addon" id="btnGroupAddon">@</span>
+            <div class="input-group-addon">
+                <div class="input-group-text" id="btnGroupAddon">@</div>
+            </div>
             <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="btnGroupAddon">
           </div>
     </div>
