--- a/test/visual/form-inline.html
+++ b/test/visual/form-inline.html
@@ -56,9 +56,13 @@
         <div class="form-group me-sm-0_5">
             <label class="sr-only" for="inputAmount2">Amount (in dollars)</label>
             <div class="input-group">
-                <div class="input-group-addon">$</div>
+                <div class="input-group-addon">
+                    <div class="input-group-text">$</div>
+                </div>
                 <input type="text" class="form-control" id="inputAmount2" placeholder="Amount">
-                <div class="input-group-addon">.00</div>
+                <div class="input-group-addon">
+                    <div class="input-group-text">.00</div>
+                </div>
             </div>
         </div>
         <button type="submit" class="btn btn-primary">Transfer cash</button>
