--- a/test/visual/form-validation.html
+++ b/test/visual/form-validation.html
@@ -23,11 +23,11 @@
     <div class="row">
         <div class="col-md-4 mb-1">
             <label for="validationDefault01">First name</label>
-            <input type="text" class="form-control" id="validationDefault01" placeholder="First name" value="Mark" required>
+            <input type="text" class="form-control" id="validationDefault01" placeholder="First name" value="John" required>
         </div>
         <div class="col-md-4 mb-1">
             <label for="validationDefault02">Last name</label>
-            <input type="text" class="form-control" id="validationDefault02" placeholder="Last name" value="Otto" required>
+            <input type="text" class="form-control" id="validationDefault02" placeholder="Last name" value="Smith" required>
         </div>
         <div class="col-md-4 mb-1">
             <label for="validationDefaultUsername">Username</label>
@@ -143,12 +143,12 @@
     <div class="row">
         <div class="col-md-4 mb-1">
             <label for="validationServer01">First name</label>
-            <input type="text" class="form-control is-valid" id="validationServer01" placeholder="First name" value="Mark" required>
+            <input type="text" class="form-control is-valid" id="validationServer01" placeholder="First name" value="John" required>
             <div class="valid-feedback">Looks good!</div>
         </div>
         <div class="col-md-4 mb-1">
             <label for="validationServer02">Last name</label>
-            <input type="text" class="form-control is-valid" id="validationServer02" placeholder="Last name" value="Otto" required>
+            <input type="text" class="form-control is-valid" id="validationServer02" placeholder="Last name" value="Smith" required>
             <div class="valid-feedback">Looks good!</div>
         </div>
         <div class="col-md-4 mb-1">
@@ -228,12 +228,12 @@
     <div class="row">
         <div class="col-md-4 mb-1">
             <label for="validationTooltip01">First name</label>
-            <input type="text" class="form-control" id="validationTooltip01" placeholder="First name" value="Mark" required>
+            <input type="text" class="form-control" id="validationTooltip01" placeholder="First name" value="John" required>
             <div class="valid-tooltip">Looks good!</div>
         </div>
         <div class="col-md-4 mb-1">
             <label for="validationTooltip02">Last name</label>
-            <input type="text" class="form-control" id="validationTooltip02" placeholder="Last name" value="Otto" required>
+            <input type="text" class="form-control" id="validationTooltip02" placeholder="Last name" value="Smith" required>
             <div class="valid-tooltip">Looks good!</div>
         </div>
         <div class="col-md-4 mb-1">
