.input-group-end and test revisions

--- a/test/visual/form-validation.html
+++ b/test/visual/form-validation.html
@@ -83,7 +83,7 @@
                 <div class="input-group-addon">
                     <span class="input-group-text" id="inputGroupAddon">@</span>
                 </div>
-                <input type="text" class="form-control" id="validationCustomUsername" placeholder="Username" aria-describedby="inputGroupAddon" required>
+                <input type="text" class="form-control input-group-end" id="validationCustomUsername" placeholder="Username" aria-describedby="inputGroupAddon" required>
                 <div class="invalid-feedback">Please choose a username.</div>
             </div>
         </div>
@@ -157,7 +157,7 @@
                 <div class="input-group-addon">
                     <span class="input-group-text" id="inputGroupAddon3">@</span>
                 </div>
-                <input type="text" class="form-control is-invalid" id="validationServerUsername" placeholder="Username" aria-describedby="inputGroupAddon3" required>
+                <input type="text" class="form-control input-group-end is-invalid" id="validationServerUsername" placeholder="Username" aria-describedby="inputGroupAddon3" required>
                 <div class="invalid-feedback">Please choose a username.</div>
             </div>
         </div>
@@ -242,7 +242,7 @@
                 <div class="input-group-addon">
                     <span class="input-group-text" id="validationTooltipUsernameAddon">@</span>
                 </div>
-                <input type="text" class="form-control" id="validationTooltipUsername" placeholder="Username" aria-describedby="validationTooltipUsernameAddon" required>
+                <input type="text" class="form-control input-group-end" id="validationTooltipUsername" placeholder="Username" aria-describedby="validationTooltipUsernameAddon" required>
                 <div class="invalid-tooltip">Please choose a unique and valid username.</div>
             </div>
         </div>
