--- a/test/visual/input-group.html
+++ b/test/visual/input-group.html
@@ -706,7 +706,7 @@
     <div class="input-group">
       <input type="text" class="form-control" aria-label="Text input with dropdown button">
       <div class="input-group-addon dropdown-menu-reverse">
-        <button type="button" class="btn btn-secondary dropdown-toggle" data-cfw="dropdown">
+        <button type="button" class="btn btn-secondary dropdown-toggle input-group-end" data-cfw="dropdown">
           Action
         </button>
         <ul class="dropdown-menu">
@@ -746,7 +746,7 @@
         <button type="button" class="btn btn-outline-secondary">Action</button>
     </div>
     <div class="input-group-addon dropdown-menu-reverse">
-        <button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-cfw="dropdown" aria-label="Toggle Dropdown"></button>
+        <button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split input-group-end" data-cfw="dropdown" aria-label="Toggle Dropdown"></button>
         <ul class="dropdown-menu ">
             <li><a href="#">Action</a></li>
             <li><a href="#">Another action</a></li>
