--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -847,27 +847,20 @@ Showing a <kbd>kdb sample</kbd>
     <small class="text-muted">This is some placeholder block-level help text for the above input. It's a bit lighter and easily wraps to a new line.</small>
   </fieldset>
   <div class="form-check">
-    <label class="form-check-label">
-      <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios1" value="option1" checked="" />
-      Option one is this and that&mdash;be sure to include why it's great
-    </label>
+    <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios1" value="option1" checked />
+    <label for="optionsRadios1" class="form-check-label">Option one is this and that&mdash;be sure to include why it's great</label>
   </div>
   <div class="form-check">
-    <label class="form-check-label">
-      <input type="radio" class="form-check-input"  name="optionsRadios" id="optionsRadios2" value="option2" />
-      Option two can be something else and selecting it will deselect option one
-    </label>
+    <input type="radio" class="form-check-input"  name="optionsRadios" id="optionsRadios2" value="option2" />
+    <label for="optionsRadios2" class="form-check-label">Option two can be something else and selecting it will deselect option one</label>
   </div>
   <div class="form-check disabled">
-    <label class="form-check-label">
-      <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios3" value="option3" disabled="" />
-      Option three is disabled
-    </label>
+    <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios3" value="option3" disabled />
+    <label for="optionsRadios3" class="form-check-label">Option three is disabled</label>
   </div>
   <div class="form-check">
-    <label class="form-check-label">
-      <input type="checkbox" class="form-check-input"/> Check me out
-    </label>
+    <input type="checkbox" class="form-check-input" id="optionCheck1" />
+    <label for="optionCheck1" class="form-check-label"> Check me out</label>
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
